# Computer-vision-projects

./: README.md  detect_qr_cv.py  qrcodegenerator.py
Activation functions/: Activation_function.ipynb  README.md
Affinetransformation/: .gitignore  CMakeLists.txt  README.md  main.cpp
Affinetransformation/include/: affinetransformation.h
Affinetransformation/src/: affinetransformation.cpp
Basicofopencv_gaussianblur/: .gitignore  CMakeLists.txt  README.md
Basicofopencv_gaussianblur/include/: helloConfig.h.in
Basicofopencv_gaussianblur/src/: main  main.cpp
CNN_documentation/: README.md
Edgedetection/: .gitignore  CMakeLists.txt  README.md
Edgedetection/include/: edgedetectConfig.h.in
Edgedetection/src/: main.cpp
Featuredetectors/: .gitignore  CMakeLists.txt  README.md  main.cpp
Featuredetectors/include/: Orb.h  featuredetect.h  surfdetector.h
Featuredetectors/src/: Orb.cpp  featuredetect.cpp  surfdetector.cpp
Gradientthreshold/: .gitignore  CMakeLists.txt  README.md  main.cpp
Gradientthreshold/include/: imagethreshold.h
Gradientthreshold/src/: imagethreshold.cpp
Linedetectionalgorithm/: .gitignore  CMakeLists.txt  README.md
Linedetectionalgorithm/include/: linedetectConfig.h.in
Linedetectionalgorithm/src/: main.cpp
Logistic_Regression/: .gitignore  Logistic_regression.ipynb  README.md
Principal_Component_analysis/: PCA.ipynb  README.md
ReadVideo/: .gitignore  CMakeLists.txt  README.md
STL file/: .gitignore  CMakeLists.txt  README.md  main.cpp
cannyedgedetection/: .gitignore  README.md
imageflip/: .gitignore  CMakeLists.txt  README.md
imageflip/include/: flipimageConfig.h.in
imageflip/src/: main.cpp
imagehistogram/: .gitignore  CMakeLists.txt  README.md
imagerotation/: .gitignore  CMakeLists.txt  README.md  main.cpp
imagerotation/include/: ImageRotation.h
imagerotation/src/: ImageRotation.cpp
k means clustering/: .gitignore  README.md  main.py
logistics_setup/: RENAME.md
neuralnetwork/: .gitignore  README.md  simpleneuralnetwork.ipynb
(+8 files in other folders)
